# cdp-bridge-mcp

./: .gitignore  README.md  pyproject.toml
doc/: README_EN.md
reports/V-001-2026-06-22/: eval_compare_report.md  eval_mcp_compare.py
reports/V-002-2026-07-12/: eval_compare_report.md  eval_mcp_compare_v2.py
src/cdp_bridge/: TMWebDriver.py  __init__.py  middleware.py  server.py  simphtml.py
src/cdp_bridge/tmwd_cdp_bridge/: background.js  content.js  manifest.json  popup.html  popup.js
